fixing swagger notation for auth path
