# public/api/v1/docs/swagger.json
@@ -178,7 +178,7 @@
                 },
                 "security": [
                     {
-                        "scalar": "bearerAuth"
+                        "bearerAuth": []
                     }
                 ]
             }
@@ -294,9 +294,7 @@
         "securitySchemes": {
             "bearerAuth": {
                 "type": "http",
-                "name": "bearerAuth",
                 "in": "header",
-                "bearerFormat": "JWT",
                 "scheme": "bearer"
             }
         }
